# DjangoTgToDoList

TGpart/: app.py  handlers.py  pyproject.toml
TGpart/Keyboards/: ClientKb.py  Groupskb.py  adminkb.py  notifications_kb.py
TGpart/adminpanel/: admin.py
TGpart/handlerss/: cron.py  events.py  groups.py  notifications.py  questions.py
TGpart/services/: ToDoServices.py
TGpart/states/: states.py
